advanced stats are calculated right after download and saved in the DB

--- a/finance/trader/templates/trader/stock_info.html
+++ b/finance/trader/templates/trader/stock_info.html
@@ -52,6 +52,20 @@
                         borderColor: "#DCEDFF",
                         backgroundColor: "#DCEDFF",
                         fill: false
+                    },
+                    {
+                        data: {{ sma_50 }},
+                        label: "50D SMA",
+                        borderColor: "#f3bcb7",
+                        backgroundColor: "#f3bcb7",
+                        fill: false
+                    },
+                    {
+                        data: {{ sma_200 }},
+                        label: "200D SMA",
+                        borderColor: "#FFDA22",
+                        backgroundColor: "#FFDA22",
+                        fill: false
                     }]
             },
             options: {
