--- a/finance/trader/templates/trader/home.html
+++ b/finance/trader/templates/trader/home.html
@@ -1,3 +1,35 @@
 {% extends 'home/base.html' %}
 {% load static %}
 
+{% block body %}
+    <div class="container pt-4">
+        <h2>Golden Crosses</h2>
+        {% if golden_crosses %}
+                {% for stock in golden_crosses %}
+                    {% if forloop.first %}<div class="row">{% endif %}
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h4>{{ stock.ticker }}</h4>
+                                    <p>{{ stock.security}}</p>
+                                    <button class="btn btn-outline-info" onclick="location.href='{% url 'stock_info' stock.ticker 180 %}'">Check it Out</button>
+                                </div>
+                            </div>
+                        </div>
+                    {% if forloop.counter|divisibleby:3 %}</div><div class="row">{% endif %}
+                    {% if forloop.last %}</div>{% endif %}
+                {% endfor %}
+        {% else %}
+            <p class="alert alert-info">No golden crosses observed</p>
+        {% endif %}
+
+        <h2 class="pt-5">Death Crosses</h2>
+        {% if death_crosses %}
+        {% for ticker in death_crosses %}
+            <a href="{% url 'stock_info' ticker 180 %}">{{ ticker }}</a><br>
+        {% endfor %}
+        {% else %}
+            <p class="alert alert-info">No death crosses observed</p>
+        {% endif %}
+    </div>
+{% endblock %}
